# odb

./: LICENSE  Makefile.in  README  VERSION  configure  gnu.xml  make.conf.in
adadoc/: Makefile  adadoc.adb  example.ads  example_rstyle.ads  test.sgml  text.adb  text.ads
apps/: MANIFEST.local  Makefile  Makefile.local  README
apps/odl/: MANIFEST.local  Makefile  main.gpb  odl-driver.adb
apps/odlls/: MANIFEST.local  Makefile  main.gpb
autoconf/: Makefile  README
base/: MANIFEST.in  Makefile  README  configure.in
doc/: MANIFEST.local  Makefile  README  gps_index.xml  note_0.6.2.html
doc/html/: a1540.htm  a1550.htm  a1640.htm  apps.html  basics.html  c1088.htm  c1102.htm  c1114.htm  c1260.htm  c1422.htm  c1462.htm  c1480.htm  c1498.htm  c1527.htm  c324.htm  c340.htm  c434.htm  c458.htm  c530.htm  c610.htm  c633.htm  c648.htm  c811.htm  c875.htm  c905.htm  c988.htm  getstarted.html  impl.html  index.html  model.html  overview.html  p322.htm  part1.html  perface.html  tools.html  using.html  x1002.htm  x1131.htm  x126.htm  x1271.htm  (+31 more)
doc/reference/: MANIFEST.local  Makefile  faq.sgml  refguide.sgml
etc/: config.site
pkg-config/: Makefile  README  apf.pc.in
rpm/: Makefile  README  odb.m4
samples/: MANIFEST.local  Makefile  Makefile.local  README  version.gps
samples/dungon/: MANIFEST.local  Makefile  README  game.odb  game.ods  main.adb  player.odb  player.ods  room.odb  room.ods
samples/pool/: MANIFEST.local  Makefile  main.adb  person.odb  person.ods
src/: MANIFEST.local  Makefile  Makefile.local  configure.local  odb-attribute_dictionary.adb  odb-attribute_dictionary.ads  odb-object_loader.adb  odb-object_loader.ads  odb-object_writer.adb  odb-object_writer.ads  odb-persistent.adb  odb-persistent.ads  odb-storage-file.adb  odb-storage-file.ads  odb-storage.adb  odb-storage.ads  odb-storage_header.adb  odb-transaction.adb
support/: MANIFEST.local  Makefile  Makefile.local  odb-collection.odb  odb-collection.ods  odb-entity.odb  odb-entity.ods  odb-generic_collection.odb  odb-generic_collection.ods
test/: MANIFEST.local  Makefile  Makefile.local  README
test/locks/: MANIFEST.local  Makefile  main.adb
test/odl/: MANIFEST.local  Makefile  main.adb
test/simple/: MANIFEST.local  Makefile  main.adb  person.adb
test/transaction/: Makefile  main.adb  person.ads
util/: MANIFEST.local  Makefile  Makefile.local  util-stack.adb  util-stack.ads
